Store symlinks without a NUL terminator so that lstat(2) returns the correct length.  Fixes the tmpfs part of PR kern/48864.